# modelo-predictivo-reingreso-pacientes

./: Makefile  README.md  README_MODEL.md  SOLUCION.md  app.py  inspect_model.py  pyproject.toml  read_notebook.py  requirements.txt  train_model_production.py
models/: model_columns.pkl  model_pipeline.pkl  modelo_optuna.pkl  modelo_produccion.pkl  modelo_produccion_metadata.pkl  production_model.joblib  top10_model.pkl  xgb_diabetic_risk_v1.pkl  xgboost_model.joblib  xgboost_prod_top10.pkl
src/: explore.final.ipynb  explore.ipynb  explore_xgboost.ipynb  features_xgboost.ipynb  final_eda.ipynb  modelo_produccion_flask.ipynb  train_xgboost.py
static/: index.html  script.js  style.css
